--- a/src/components/charts/CustomTooltip.css
+++ b/src/components/charts/CustomTooltip.css
@@ -8,7 +8,7 @@
 
 .tooltip-label {
   color: white;
-  font-weight: 600;
+  font-weight: normal;
   margin-bottom: 0.25rem;
 }
 
